[tool.poetry]
authors = ["Benjamin Clavie <ben@clavie.eu>"]
description = "Library to facilitate the use of state-of-the-art retrieval models in common RAG contexts."
license = "Apache-2.0"
name = "RAGatouille"
packages = [{include = "ragatouille"}]
readme = "README.md"
repository = "https://github.com/bclavie/ragatouille"
version = "0.0.8post2"

[tool.poetry.dependencies]
colbert-ai = "0.2.19"
faiss-cpu = "^1.7.4"
fast-pytorch-kmeans = "0.2.0.1"
langchain = "^0.2.0"
langchain_core = "^0.2.0"
llama-index = ">=0.7"
onnx = "^1.15.0"
python = ">=3.9,<4.0"
sentence-transformers = "^2.2.2"
srsly = "2.4.8"
torch = ">=1.13,<=2.2.1"
transformers = "^4.36.2"
voyager = "^2.0.2"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.18"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.1.2"
pytest = "^7.4.0"
ruff = "^0.1.9"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::Warning",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "*.ipynb",
  "examples",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

# Same as Black.
line-length = 88
output-format = "grouped"

target-version = "py39"

[tool.ruff.lint]
ignore = [
  "B006",
  "B018",
]
select = [
  # bugbear rules
  "B",
  "I", # remove unused imports
  "F401", # bare except statements
  "E722", # unused arguments
  "ARG",
]

ignore-init-module-imports = true
unfixable = [
  "T201",
  "T203",
]
